--- a/papers/templates/home.html
+++ b/papers/templates/home.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="flex flex-col items-center justify-center min-h-[60vh]">
-  <h1 class="text-3xl font-bold text-gray-800 mb-2 text-center dark:text-zinc-300">
+  <h1 class="text-3xl font-bold text-blue-900 mb-2 text-center dark:text-zinc-300 ">
     Welcome to the Semantic Academic Paper Repository
   </h1>
   <h2 class="text-lg text-gray-600 mb-6 text-center dark:text-zinc-400">
@@ -30,7 +30,7 @@
       name="q"
       placeholder="Search papers, authors, or topics..."
       value="{{ request.GET.q }}"
-      class="w-full p-3 pl-12 border-2 border-black rounded-full focus:ring-1 focus:ring-black focus:outline-none transition dark:bg-zinc-900 dark:border-zinc-700 dark:text-zinc-100"
+      class="w-full p-3 pl-12 border-2 border-blue-800 rounded-full focus:ring-1 focus:ring-black focus:outline-none transition dark:bg-zinc-900 dark:border-zinc-700 dark:text-zinc-100"
       autocomplete="off">
   </div>
 </form>
