--- a/papers/templates/papers/paper_list.html
+++ b/papers/templates/papers/paper_list.html
@@ -11,7 +11,7 @@
       <div class="w-full px-4 mt-2 mb-2 flex flex-col md:flex-row md:items-center md:justify-between gap-2">
         <div class="inline-flex rounded-md shadow-sm bg-gray-100 dark:bg-zinc-800 dark:text-zinc-300 dark:border-zinc-700 mb-4">
     <button type="button"
-            :class="view === 'card' ? 'bg-white text-black font-semibold border border-gray-300 dark:bg-zinc-600 dark:text-zinc-300 dark:border-zinc-700' : 'text-gray-300 border border-transparent'"
+            :class="view === 'card' ? 'bg-white text-black font-semibold  dark:bg-zinc-600 dark:text-zinc-300 dark:border-zinc-700' : 'text-gray-300 border border-transparent'"
             class="px-3 py-1 rounded-l-md focus:outline-none transition"
             @click="view = 'card'">
       
@@ -22,7 +22,7 @@
     </button>
 
     <button type="button"
-            :class="view === 'compact' ? 'bg-white text-black font-semibold border border-gray-300 dark:bg-zinc-600 dark:text-zinc-300 dark:border-zinc-700' : 'text-gray-300 border border-transparent'"
+            :class="view === 'compact' ? 'bg-white text-black font-semibold  dark:bg-zinc-600 dark:text-zinc-300 dark:border-zinc-700' : 'text-gray-300 border border-transparent'"
             class="px-3 py-1 rounded-r-md focus:outline-none transition"
             @click="view = 'compact'">
       <svg xmlns="http://www.w3.org/2000/svg" class="inline w-4 h-4 mr-1 -mt-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
