--- a/papers/templates/papers/partials/paper_list/_paper_list_content.html
+++ b/papers/templates/papers/partials/paper_list/_paper_list_content.html
@@ -56,14 +56,23 @@
 
         {% if item.paper %}
           <a href="{% url 'paper_detail' item.paper.pk %}" class="font-semibold text-base text-gray-900 tracking-tight hover:underline mb-1 dark:text-zinc-300">{{ item.paper.title }}</a>
+          {% if item.score and item.score != '-' %}
+            <div class="text-xs text-gray-500 mb-1 dark:text-zinc-400">
+              Similarity: {{ item.score }}
+            </div>
+          {% endif %}
         {% else %}
           <span class="text-base text-gray-400 font-semibold dark:text-zinc-300">[Paper not found]</span>
         {% endif %}
+
+        
         <div class="text-xs text-gray-700 mb-1 dark:text-zinc-300">
           {% if item.paper and item.paper.authors %}
             {{ item.paper.authors|join:', ' }}
           {% endif %}
         </div>
+
+        
         <div class="text-xs text-gray-500 mb-1 dark:text-zinc-300">
           {% if item.paper %}{{ item.paper.college }}{% endif %} {% if item.paper %}{{ item.paper.program }}{% endif %} {% if item.paper %}- {{ item.paper.year }}{% endif %}
         </div>
@@ -92,6 +101,8 @@
     {% empty %}
       <div class="col-span-2 text-center text-gray-500 py-8">No results found.</div>
     {% endfor %}
+
+    
   </div>
 
   <!-- Card View -->
@@ -108,6 +119,12 @@
       {% else %}
         <span class="text-xl text-gray-400 font-semibold">[Paper not found]</span>
       {% endif %}
+
+      {% if item.score and item.score != '-' %}
+  <div class="text-xs text-gray-500 mb-1 dark:text-zinc-400">
+    Similarity: {{ item.score }}
+  </div>
+{% endif %}
 
       <!-- Author -->
       {% with paper=item.paper %}
